--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
-.heading {
-    color: black;
-    text-decoration: underline;
-    width: 300px;
-    height: 300px;
-    text-align: center;
-    font-size: larger;
-    font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #1e1e1e; 
+    font-family: Arial, sans-serif;
 }
+
+.heading {
+    color: #fff;
+    text-decoration: underline;
+    font-size: 20px; 
+    margin: 10px;
+}
+
+#score-div {
+    color: #fff; 
+    margin: 10px;
+    width: 300px;
+}
+
+#score {
+    font-size: 16px; 
+    margin-bottom: 10px;
+}
+
